--- a/index.html
+++ b/index.html
@@ -892,6 +892,9 @@
 			<a id="privacy" href="http://my-mind.github.io/PRIVACY.txt">Privacy policy</a>
 			<button id="toggle" title="Toggle UI"></button>
 			<button data-command="Help" title="Help"><img src="icons/help.png" alt="Help" /></button>
+			<button data-command="Help" title="Help"><img src="icons/help.png" alt="Help" /></button>
+			
+			
 			<button data-command="Notes" title="Notes"><img src="icons/notes.png" alt="Notes" /></button>
 
 			<div id="throbber"></div>
