--- a/index.html
+++ b/index.html
@@ -894,6 +894,7 @@
 			<button data-command="Help" title="Help"><img src="icons/help.png" alt="Help" /></button>
 			<button data-command="MyHelp" title="Help"><img src="icons/help.png" alt="Help" /></button>
 			
+			<button data-command="Help" id="copyhelp" title="Help"><img src="icons/help.png" alt="Help" /></button>
 			
 			<button data-command="Notes" title="Notes"><img src="icons/notes.png" alt="Notes" /></button>
 
