--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
 	<head>
+<meta http-equiv="Cache-Control" content="no-cache">
+
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1.0" />
 		<title>My Mind</title>
@@ -892,9 +894,9 @@
 			<a id="privacy" href="http://my-mind.github.io/PRIVACY.txt">Privacy policy</a>
 			<button id="toggle" title="Toggle UI"></button>
 			<button data-command="Help" title="Help"><img src="icons/help.png" alt="Help" /></button>
-			<button data-command="MyHelp" title="Help"><img src="icons/help.png" alt="Help" /></button>
+			<button data-command="MyHelp" title="Help"><img src="icons/notes.png" alt="Help" /></button>
 			
-			<button data-command="Help" id="copyhelp" title="Help"><img src="icons/help.png" alt="Help" /></button>
+			<button data-command="Help" id="copyhelp" title="Help"><img src="icons/notes.png" alt="Help" /></button>
 			
 			<button data-command="Notes" title="Notes"><img src="icons/notes.png" alt="Notes" /></button>
 
