--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,9 @@
 <html manifest="cache.appcache">
 /PRODUCTION -->
 <head>
+  <meta http-equiv="Pragma" content="no-cache">
+
+<meta http-equiv="Cache-Control" content="no-cache">
 <meta charset="utf-8">
 <meta name="description" content="mindmaps is an HTML5 based mind mapping app. It lets you create neat looking mind maps in the browser." />
 <meta name="keywords" content="mind maps html5 mindmaps offline easy intuitive" />
