--- a/src/index.html
+++ b/src/index.html
@@ -284,7 +284,7 @@
   <script src="js/NewDocument.js"></script>
   <script src="js/OpenDocument.js"></script>
   <script src="js/SaveDocument.js"></script>
-  <script src="js/MainViewController.js"></script>
+  <script src="js/MainViewController.js?v=1"></script>
   <script src="js/Storage.js"></script>
   <script src="js/Event.js"></script>
   <script src="js/Notification.js"></script>
