--- a/src/index.html
+++ b/src/index.html
@@ -270,7 +270,7 @@
   <script src="js/ClipboardController.js"></script>
   <script src="js/ZoomController.js"></script>
   <script src="js/ShortcutController.js"></script>
-  <script src="js/HelpController.js"></script>
+  <script src="js/HelpController.js?ver=1"></script>
   <script src="js/FloatPanel.js"></script>
   <script src="js/Navigator.js"></script>
   <script src="js/Inspector.js"></script>
@@ -279,7 +279,7 @@
   <script src="js/CanvasDrawingTools.js"></script>
   <script src="js/CanvasView.js"></script>
   <script src="js/CanvasPresenter.js"></script>
-  <script src="js/ApplicationController.js"></script>
+  <script src="js/ApplicationController.js?ver=1"></script>
   <script src="js/MindMapModel.js"></script>
   <script src="js/NewDocument.js"></script>
   <script src="js/OpenDocument.js"></script>
