--- a/mark/index.html
+++ b/mark/index.html
@@ -11,5 +11,8 @@
       style="width: 100%; height: 50px; position: absolute;"
     ></svg>
     <script src="src/index.js"></script>
+    
+
+<script src="https://cdn.jsdelivr.net/npm/d3@6.6.0"></script><script src="https://cdn.jsdelivr.net/npm/markmap-view@0.2.3"></script>
   </body>
 </html>
